--- a/src/main/resources/templates/chatRooms.html
+++ b/src/main/resources/templates/chatRooms.html
@@ -231,7 +231,6 @@
 
     const inviteUserBtn = document.getElementById('inviteUsers');
     inviteUserBtn.addEventListener('click', function () {
-        console.log(selectedResults);
 
         var selectedTexts = [];
         $("#selectedResultsModal button").each(function() {
@@ -241,15 +240,12 @@
         // 선택한 결과를 서버로 전송하고자 하는 코드 작성
         var selectedResultsJSON = JSON.stringify(selectedTexts);
 
-        console.log(selectedResultsJSON);
-
         $.ajax({
             type: "POST",
             url : "/api/chatRooms",
             contentType: "application/json",
             data: JSON.stringify({ username : selectedTexts }),
             success: function (data) {
-                console.log(data);
                 window.location.href = data;
             }, error: function () {
 
@@ -279,8 +275,6 @@
                         }
                     },
                     error: function(error) {
-                        console.log("실패");
-                        console.error("검색 오류:", error);
                     }
                 });
             }
@@ -331,7 +325,6 @@
                     }
                 },
                 error: function(error) {
-                    console.error("검색 오류:", error);
                 }
             });
         }
@@ -359,10 +352,8 @@
                 updateNotificationList();
                 updateNotificationIcon();
             } else {
-                console.error('Error fetching notifications:', response.status);
             }
         } catch (error) {
-            console.error('Error fetching notifications:', error);
         }
     };
 
@@ -377,10 +368,8 @@
                     loadNotificationsFromServer(userId);
                 }
             } else {
-            console.error('Error fetching user info:', response.status);
             }
         } catch (error) {
-          console.error('Error fetching user info:', error);
         }
     };
 
@@ -510,14 +499,12 @@
             url: `/api/auth/refresh/access-token`,
             contentType: "application/json",
             success: function (data) {
-                console.log(data);
                 Toast.fire({
                   icon: 'success',
                   title: "로그인 연장 성공",
                 })
             },
             error: function (data) {
-                console.log(data);
                 Toast.fire({
                     icon: 'error',
                     title: "로그인 연장 실패. 재로그인 부탁드립니다.",
@@ -531,9 +518,7 @@
     /* 페이지 첫 로드 메서드 */
     function pageSetting() {  // main page 세팅
         const token = Cookies.get('Authorization');
-        const rtoken = Cookies.get('RefreshToken');
-        console.log(token);
-        console.log(rtoken);
+        // const rtoken = Cookies.get('RefreshToken');
 
         const loginBtn = document.getElementById('login');
         const logoutBtn = document.getElementById('logout');
