--- a/src/main/resources/templates/backUsers.html
+++ b/src/main/resources/templates/backUsers.html
@@ -195,10 +195,10 @@
                     updateNotificationList();
                     updateNotificationIcon();
                 } else {
-                    console.error('Error fetching notifications:', response.status);
+                    // console.error('Error fetching notifications:', response.status);
                 }
             } catch (error) {
-                console.error('Error fetching notifications:', error);
+                // console.error('Error fetching notifications:', error);
             }
         };
 
@@ -213,10 +213,10 @@
                         loadNotificationsFromServer(userId);
                     }
                 } else {
-                    console.error('Error fetching user info:', response.status);
+                    // console.error('Error fetching user info:', response.status);
                 }
             } catch (error) {
-                console.error('Error fetching user info:', error);
+                // console.error('Error fetching user info:', error);
             }
         };
 
@@ -386,14 +386,14 @@
             url: `/api/auth/refresh/access-token`,
             contentType: "application/json",
             success: function (data) {
-                console.log(data);
+                // console.log(data);
                 Toast.fire({
                     icon: 'success',
                     title: "로그인 연장 성공",
                 })
             },
             error: function (data) {
-                console.log(data);
+                // console.log(data);
                 Toast.fire({
                     icon: 'error',
                     title: "로그인 연장 실패. 재로그인 부탁드립니다.",
@@ -407,8 +407,8 @@
     function pageSetting() {  // main page 세팅
         const token = Cookies.get('Authorization');
         const rtoken = Cookies.get('RefreshToken');
-        console.log(token);
-        console.log(rtoken);
+        // console.log(token);
+        // console.log(rtoken);
 
         const loginBtn = document.getElementById('login');
         const logoutBtn = document.getElementById('logout');
@@ -553,7 +553,7 @@
                 userInfoList.innerHTML = '';
                 renderPostsForPage(currentPage);
             })
-            .catch(error => console.error('Error fetching posts:', error));
+            // .catch(error => console.error('Error fetching posts:', error));
     }
 
     // 수정 버튼 클릭 시 실행되는 함수 (수정한 부분만 포함)
@@ -688,7 +688,7 @@
                             })
                             fetchAndRenderPosts();
                         })
-                        .catch(error => console.error('Error updating post:', error));
+                        // .catch(error => console.error('Error updating post:', error));
 
                     popupWindow.close();
                 });
@@ -820,7 +820,7 @@
                             })
                             fetchAndRenderComments();
                         })
-                        .catch(error => console.error('Error updating comment:', error));
+                        // .catch(error => console.error('Error updating comment:', error));
 
                     popupWindow.close();
                 });
@@ -976,14 +976,14 @@
                                 fetchAndRenderUsers(); // 정보 업데이트 후 화면 갱신
                                 popupWindow.close();
                             })
-                            .catch(error => console.error('Error updating profile:', error));
+                            // .catch(error => console.error('Error updating profile:', error));
                     });
 
                     cancelProfileButton.addEventListener('click', () => {
                         popupWindow.close();
                     });
                 })
-                .catch(error => console.error('Error fetching profile data:', error));
+                // .catch(error => console.error('Error fetching profile data:', error));
         }
 
     });
@@ -1029,7 +1029,7 @@
                                 })
                                 fetchAndRenderPosts(); // 삭제 후 화면 갱신
                             })
-                            .catch(error => console.error('Error deleting post:', error));
+                            // .catch(error => console.error('Error deleting post:', error));
                     }
                 });
 
@@ -1086,7 +1086,7 @@
                                 })
                                 fetchAndRenderComments(); // 삭제 후 화면 갱신
                             })
-                            .catch(error => console.error('Error deleting comment:', error));
+                            // .catch(error => console.error('Error deleting comment:', error));
                     }
                 });
 
@@ -1140,7 +1140,7 @@
                             window.location.href = window.location.origin + "/api/auth/login-page";
 
                         })
-                        .catch(error => console.error('Error signing out:', error));
+                        // .catch(error => console.error('Error signing out:', error));
                 } else {
                     // 취소된 경우에 대한 처리
                     Swal.fire({
@@ -1177,7 +1177,7 @@
                 userInfoList.innerHTML = '';
                 renderCommentsForPage(currentPage);
             })
-            .catch(error => console.error('Error fetching comments:', error));
+            // .catch(error => console.error('Error fetching comments:', error));
     }
 
     function fetchAndRenderUsers() {
@@ -1200,7 +1200,7 @@
                 userInfoList.innerHTML = '';
                 renderUsersForPage(currentPage);
             })
-            .catch(error => console.error('Error fetching user information:', error));
+            // .catch(error => console.error('Error fetching user information:', error));
     }
 
     function renderPagination() {
@@ -1287,7 +1287,7 @@
                         location.reload();
                     },
                     error: function (error) {
-                        console.error('업로드 실패:', error);
+                        // console.error('업로드 실패:', error);
                     }
                 });
             }
