[REFECTOR] cosole 주석처리

--- a/src/main/resources/templates/category.html
+++ b/src/main/resources/templates/category.html
@@ -261,7 +261,7 @@
     const url = `/api/post-page?category=${category}`;
     if(token){ // 토큰 있을 경우
       window.location.href = url;
-      console.log(url);
+      // console.log(url);
     } else {
       Swal.fire({
         title: '로그인한 사용자만 작성할 수 있습니다.',
@@ -324,10 +324,10 @@
           updateNotificationList();
           updateNotificationIcon();
         } else {
-          console.error('Error fetching notifications:', response.status);
+          // console.error('Error fetching notifications:', response.status);
         }
       } catch (error) {
-        console.error('Error fetching notifications:', error);
+        // console.error('Error fetching notifications:', error);
       }
     };
 
@@ -342,10 +342,10 @@
             loadNotificationsFromServer(userId);
           }
         } else {
-          console.error('Error fetching user info:', response.status);
+          // console.error('Error fetching user info:', response.status);
         }
       } catch (error) {
-        console.error('Error fetching user info:', error);
+        // console.error('Error fetching user info:', error);
       }
     };
 
@@ -515,14 +515,14 @@
       url: `/api/auth/refresh/access-token`,
       contentType: "application/json",
       success: function (data) {
-        console.log(data);
+        // console.log(data);
         Toast.fire({
           icon: 'success',
           title: "로그인 연장 성공",
         })
       },
       error: function (data) {
-        console.log(data);
+        // console.log(data);
         Toast.fire({
           icon: 'error',
           title: "로그인 연장 실패. 재로그인 부탁드립니다.",
@@ -535,9 +535,7 @@
   /* 페이지 첫 로드 메서드 */
   function pageSetting() {  // main page 세팅
     const token = Cookies.get('Authorization');
-    const rtoken = Cookies.get('RefreshToken');
-    console.log(token);
-    console.log(rtoken);
+
 
     const loginBtn = document.getElementById('login');
     const logoutBtn = document.getElementById('logout');
