--- a/src/main/resources/templates/mainPage.html
+++ b/src/main/resources/templates/mainPage.html
@@ -119,7 +119,10 @@
         <div class="bottom-container">
             <div class="bottom-top">
                 <div class="bottom-top-left">
-                    <a class="category-title" href="/api/posts/categories/1">협업 인원 모집</a>
+                    <div class="category-title">
+                        <a href="/api/posts/categories/1">협업 인원 모집</a>
+                        <a href="/api/posts/categories/1">바로가기</a>
+                    </div>
                     <ul class="list-group list-group-flush">
                         <li class="list-group-item d-flex justify-content-between align-items-center"
                             th:each="project : ${projects}" th:onclick="'gotoPost(\'' + ${project.id} + '\')'">
@@ -132,7 +135,10 @@
                     </ul>
                 </div>
                 <div class="bottom-top-right">
-                    <a class="category-title" href="/api/posts/categories/2">스터디원 모집</a>
+                    <div class="category-title">
+                        <a href="/api/posts/categories/2">스터디원 모집</a>
+                        <a href="/api/posts/categories/2">바로가기</a>
+                    </div>
                     <ul class="list-group list-group-flush">
                         <li class="list-group-item d-flex justify-content-between align-items-center"
                             th:each="study : ${studies}" th:onclick="'gotoPost(\'' + ${study.id} + '\')'">
@@ -148,7 +154,10 @@
 
         <div class="bottom-bottom">
             <div class="bottom-bottom-left">
-                <a class = "category-title" href="/api/posts/categories/3">문제은행</a>
+                <div class="category-title">
+                    <a href="/api/posts/categories/3">문제은행</a>
+                    <a href="/api/posts/categories/3">바로가기</a>
+                </div>
                 <ul class="list-group list-group-flush">
                     <li class="list-group-item d-flex justify-content-between align-items-center"
                         th:each="exam : ${exams}"  th:onclick="'gotoPost(\'' + ${exam.id} + '\')'">
@@ -160,7 +169,10 @@
             </div>
 
             <div class="bottom-bottom-right">
-                <a class = "category-title" href="/api/posts/categories/4">자유게시판</a>
+                <div class="category-title">
+                    <a href="/api/posts/categories/4">자유게시판</a>
+                    <a href="/api/posts/categories/4">바로가기</a>
+                </div>
                 <ul class="list-group list-group-flush">
                     <li class="list-group-item d-flex justify-content-between align-items-center"
                         th:each="forum : ${forums}"  th:onclick="'gotoPost(\'' + ${forum.id} + '\')'">
