--- a/src/main/resources/templates/updatePost.html
+++ b/src/main/resources/templates/updatePost.html
@@ -31,8 +31,6 @@
 
     </style>
 
-    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
-
 
 </head>
 <body>
@@ -225,8 +223,6 @@
 
 
         var fileUrl = $("#currentImageUrl").val();
-
-
         // 게시물 파일 삭제
         //게시믈 null로 변경?
         //게시물만 삭제 가능?
@@ -252,7 +248,6 @@
 
                         // 삭제에 성공한 경우
                         // 화면에서 해당 댓글을 제거하거나 업데이트
-
                         image.remove(); // 이미지를 DOM에서 제거
                         button.remove(); // 버튼을 DOM에서 제거
 
@@ -294,7 +289,7 @@
                     showCancelButton: true,
                     confirmButtonColor: '#d33',
                     cancelButtonColor: '#3085d6',
-                    confirmButtonText: '수정',
+                    confirmButtonText: '삭제',
                     cancelButtonText: '취소',
 
                     reverseButtons: false, // 버튼 순서 거꾸로
