--- a/src/main/resources/templates/backUsers.html
+++ b/src/main/resources/templates/backUsers.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
 
     <title>코끼리</title>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
@@ -29,7 +30,7 @@
     <style>
 
     </style>
-    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
+
 </head>
 <body>
 
@@ -1273,9 +1274,7 @@
         // 프로필 이미지 업로드 버튼에 클릭 이벤트를 추가하고 이미지를 선택하면 AJAX를 통해 서버로 업로드
         uploadImageButton.addEventListener('click', () => {
             const file = imageInput.files[0];
-            var profileUrl = `${profileUrl}`;
 
-            console.log(profileUrl);
 
 
             if (file) {
@@ -1286,7 +1285,7 @@
 
                 // AJAX 요청을 보내고 이미지 URL을 서버로 업로드
                 $.ajax({
-                    url: `/api/users/profile/image?profileUrl=${profileUrl}`, // 서버 업로드 URL로 변경
+                    url: `/api/users/profile/image`, // 서버 업로드 URL로 변경
                     type: 'POST',
                     data: formData,
                     contentType: false,
