--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8"><link rel="shortcut icon" href="#">
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
+
     <script src="https://cdn.jsdelivr.net/npm/js-cookie@3.0.5/dist/js.cookie.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.7.0.min.js"
             integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g="
             crossorigin="anonymous"></script>
 
-    <title>Elephant</title>
+    <title>코끼리</title>
     <link rel="icon" href="https://cdn-icons-png.flaticon.com/128/1864/1864497.png" />
     <link rel="stylesheet" type="text/css" href="/css/index.css">
 </head>
